# Rim

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/rim/: app.rs  image.rs  layout.rs  mod.rs  open_file_dialog.rs  opengl_macros.rs  util.rs  vec.rs  view.rs
