[package]
name = "rim"
version = "0.1.0"
authors = ["Nico <nicolas.otremba@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
sdl2 = "0.33.0"
gl = "0.14.0"
imgui = "0.3.0"
imgui-sdl2 = "0.9.0"
imgui-opengl-renderer = "0.7.0"
image = "0.23.4"
notify = "4.0.15"

[profile.dev.package."*"]
opt-level = 3

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"